--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -1,11 +1,35 @@
 {% load static %}
 
             <!-- Footer -->
-            <footer class="sticky-footer bg-white">
-                <div class="container my-auto">
-                    <div class="copyright text-center my-auto">
-                        <span>Taller de Diseño y Desarrollo de Soluciones 2024</span>
-                    </div>
+
+<footer class="sticky-footer bg-white">
+    <div class="container my-auto">
+        <div class="row">
+            <!-- Contacto (columna 1) -->
+            <div class="col-12 col-md-3 text-center my-auto">
+                <div>
+                    <span><strong>Contacto:</strong></span><br>
+                    <!-- Celular -->
+                    <a href="tel:+1234567890" class="d-block text-gray-600">
+                        <i class="bi bi-phone"></i> : +1 234 567 890
+                    </a>
+                    <!-- Correo electrónico -->
+                    <a href="mailto:correo@ejemplo.com" class="d-block text-gray-600">
+                        <i class="bi bi-envelope"></i> : correo@ejemplo.com
+                    </a>
+                    <!-- Instagram -->
+                    <a href="https://www.instagram.com/tuusuario" target="_blank" class="d-block text-gray-600">
+                        <i class="bi bi-instagram"></i> : @tuusuario
+                    </a>
                 </div>
-            </footer>
+            </div>
+
+            <!-- Copyright (columna 2) -->
+            <div class="col-12 col-md-6 text-center my-auto">
+                <span>Taller de Diseño y Desarrollo de Soluciones 2024</span>
+            </div>
+        </div>
+    </div>
+</footer>
+
             <!-- End of Footer -->
