--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 {% load static %}
 <head>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
