--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -2,8 +2,14 @@
 <html lang="en">
 {% load static %}
 <head>
+    <!-- Agregar Bootstrap Icons -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <meta charset="utf-8">
+    <link rel="icon" href="{% static 'img/logo.png' %}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -43,7 +49,6 @@
 
                     <!-- Page Heading -->
                     {% block contenido %}
-                    CONTENIDO BASE
                     {% endblock %}
 
                 </div>
