--- a/templates/base/sidebar.html
+++ b/templates/base/sidebar.html
@@ -1,14 +1,18 @@
+
 {% load static %}
 <!-- Sidebar -->
+<!-- Agregar Bootstrap Icons -->
+
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
-                </div>
-                <div class="sidebar-brand-text mx-3">Crypto</div>
-            </a>
+<a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'home' %}">
+    <div class="sidebar-brand-icon rotate-n-15">
+        <img style="width: 40px; height: auto;"  src="{% static 'img/logo.png' %}" alt="Logo" />
+    </div>
+    <div class="sidebar-brand-text mx-3">Crypto</div>
+</a>
+
 
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
@@ -27,46 +31,22 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Interface
+                Administrador
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
 
 
 
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
-                </a>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
-                    </div>
-                </div>
+           
+
+                            <li class="nav-item">
+                <a class="nav-link" href="{% url 'user_list' %}">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Usuarios</span></a>
             </li>
 
-            <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Utilities</span>
-                </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Colors</a>
-                        <a class="collapse-item" href="utilities-border.html">Borders</a>
-                        <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                        <a class="collapse-item" href="utilities-other.html">Other</a>
-                    </div>
-                </div>
-            </li>
+
 
             {% endif %}
 
@@ -75,16 +55,16 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="{% url 'favorites_list' %}">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Favoritos</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
+                <a class="nav-link" href="{% url 'portafolio_view' %}">
+                    <i class="bi bi-wallet2"></i>
+                    <span>Portafolio</span></a>
             </li>
 
             <!-- Divider -->
